# Streaky

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PERFORMANCE.md  README.md  dc_webhook.py  main.py
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  label-issues-prs.yml  security.yml  stale.yml
cli/: README.md  main.py  pyproject.toml  test_main.py
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
server/src/: discord.rs  encryption.rs  handlers.rs  main.rs  telegram.rs
web/: .gitignore  README.md  package-lock.json  package.json
web/backend/: .dev.vars.example  package-lock.json  package.json  wrangler.toml
web/backend/_archive/cron/: streak-checker.ts
web/backend/migrations/: 0001_create_users_table.sql  0002_create_notifications_table.sql  0003_add_github_pat_column.sql  0004_create_cron_queue_table.sql  0005_add_queue_indexes.sql  0006_add_reminder_utc_hour.sql  README.md
web/backend/src/: index.ts
web/backend/src/cron/: process-single-user.ts  queue-processor.ts  streak-checker.ts
web/backend/src/lib/: monitoring.ts
web/backend/src/middleware/: auth.ts  cors.ts  rate-limit.ts
web/backend/src/routes/: cron.ts  user.ts
web/backend/src/services/: encryption.ts  github-cached.ts  github.ts  notifications.ts  queue.ts
web/backend/src/types/: database.ts  env.ts
web/backend/test/: encryption.spec.ts  github-cached.spec.ts  github.spec.ts
web/frontend/: auth.ts  env.example  eslint.config.mjs  middleware.ts  package-lock.json  package.json
web/frontend/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/frontend/app/about/: page.tsx
web/frontend/app/dashboard/: page.tsx
web/frontend/app/privacy/: page.tsx
web/frontend/app/settings/: page.tsx
web/frontend/components/: error-boundary.tsx  github-star-button.tsx  loading-spinner.tsx  simple-3d-test.tsx  sketchfab-icons.tsx  social-icons-3d.tsx
web/frontend/lib/: analytics.ts  auth-token.ts
(+8 files in other folders)
